# CARDEX

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLEANUP_REPORT.md  CONTEXT_FOR_AI.md  CONTRIBUTING.md  DISCOVERY-ENGINE-v3.md  DISCOVERY-ENGINE.md  GETTING_STARTED.md  INCIDENTS.md  LICENSE  Makefile  OPERATIONS.md  README.md  RUNBOOKS.md  SECURITY.md  SPEC.md  STATUS.md  SUPPLY_CHAIN_POLICY.md  docker-compose.yml  go.work  go.work.sum
ai/: worker.py
alpha/: go.mod
api/: go.mod
b2b-dashboard/: package-lock.json  package.json
clients/edge-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/edge-tauri/src-tauri/src/: grpc_client.rs  lib.rs  main.rs
cm-proxy/: package.json
core-api/: go.mod  go.sum
corporate/: go.mod  go.sum
crm-edge/: package-lock.json  package.json  vite.config.js
crm-edge/src-tauri/: Cargo.toml  tauri.conf.json
crm-edge/src-tauri/src/: lib.rs  main.rs
deploy/: README.md  credentials-status.md  env.example  healthchecks-io.md  runbook.md
discovery/: README.md  go.mod  go.sum
e2e/: chain_test.go  go.mod  go.sum
edge/: go.mod  go.sum
extraction/: go.mod  go.sum
financial/: go.mod
forensics/: go.mod
gateway/: go.mod
ingestion/: cartografo_headless.js  go.mod  go.sum  h3_swarm_node.py  package-lock.json  package.json  radar_vanguardia.js  requirements.txt
legal/: go.sum
migrations/: 0001_vehicles_created_at.sql
monitoring/: prometheus.yml
neural/: go.mod
nginx/: nginx.conf
planning/: README.md
quality/: go.mod  go.sum
scrapers/: Dockerfile  enrich_worker.py  requirements.txt  run_all.py  run_scraper.py  sitemap_indexer.py
(+1137 files in other folders)
