[package]
name = "crm-edge"
version = "2.0.0"
description = "Cardex DMS Edge - Phase 9 (Phantom Multiposting, Ghost WebViews)"
edition = "2021"
rust-version = "1.70"

[lib]
name = "crm_edge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
