[package]
name = "cardex-edge-tauri"
version = "0.1.0"
description = "CARDEX Edge Tauri desktop client — push DMS inventory via gRPC"
edition = "2021"
rust-version = "1.77"

[lib]
name = "cardex_edge_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cardex-edge-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["updater"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tokio = { version = "1", features = ["full"] }

# CSV parsing for bulk import
csv = "1"

# Serialisation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
